--- a/pages/founder/founder.html
+++ b/pages/founder/founder.html
@@ -32,18 +32,18 @@
         </p>
         </div>
 
-        <div class=" p-10 sm:grid grid-cols-12 gap-10 bg-white">
+        <div class=" p-10 grid lg:grid-cols-12 gap-10 bg-white">
 
-            <div class="col-span-12">
+            <div class="lg:col-span-12">
                 <h3 class="text-[20px]">Hello !</h3>
             </div>
 
-            <div class="flex justify-center items-center col-span-6">
+            <div class="flex justify-center items-center lg:col-span-6">
                 <div class="max-w-[200px]">
                     <img class="w-full" src="/assets/images/kumaravelProfile.jpg" alt="Founder image">
                 </div>
             </div>
-            <div class="sm:p-10 bg-[#fbf3db] col-span-6">
+            <div class="sm:p-10 bg-[#fbf3db] lg:col-span-6">
                 <p>
                     🏖️<br>
                     Hi! I'm Kumaravel an engineering graduate, application developer and soloprenure from Chennai, Tamil Nadu. <br>
