Changed the dropdown icon, and added intro info for about us page.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
             <div class="col-span-10 flex gap-10 items-center">
                 <a class="hover:text-blue-500" href="/">Home</a>
                 <a class="hover:text-blue-500" href="/pages/products/products.html">Products</a>
-                <a id="companyDropDown" class="hover:text-blue-500" href="#">Company</a>
+                <a id="companyDropDown" class="hover:text-blue-500 flex gap-1 items-center" href="#">
+                    <div>
+                        <p>Company</p>
+                    </div>
+                    <div class="max-w-[16px]">
+                        <img class="w-full" src="/assets/icons/dropDown.png">
+                    </div>
+                </a>
             </div>
             <div class="hidden col-span-12 companyDropDownList grid grid-cols-2 gap-5">
                 <div class="bg-[#E7F3F8] p-5 rounded-lg">
