--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/icons/TamilNady_Map_Icon.png">
-    <link rel="stylesheet" href="./founder.css">
     <title>Aukdon</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,11 +24,15 @@
         <!-- First section - Intro -->
         <div>
             <h1 class="font-['Fredoka'] text-[48px]">aukdon</h1>
-            <p>
-                🚀 A cloud application developemt company. <br>
-                💡 Aukdon was in the ideation stage in 2023. And in 2024 it became live with its first product "GOD". <br>
-                🏖️ The Aukdon development lab (My home work desk) is located in Chennai, Tamil Nadu. <br>
-            </p>
+            <div class="lg:grid grid-cols-2">
+                <p>
+                    🚀 A cloud application developemt company. <br>
+                    💡 Aukdon was in the ideation stage in 2023. In 2024 it became live with its first product "GOD". <br>
+                    🏖️ The Aukdon development lab (My home work desk) is located in Chennai, Tamil Nadu. <br>
+                    🦋 Specializes in building scalable and secure cloud-based applications. <br>
+                    🚚 Delivers seamless integration and innovative solutions for diverse industries. <br>
+                </p>
+            </div>
         </div>
 
         <!-- Social links -->
