--- a/pages/careers/careers.html
+++ b/pages/careers/careers.html
@@ -21,7 +21,15 @@
     </div>
 
     <div>
-        Currently there are no vacancies.
+        <!-- First section - Intro -->
+        <div>
+            <h1 class="font-['Fredoka'] text-[48px]">Careers</h1>
+            <div class="lg:grid grid-cols-2">
+                <p>
+                    Currently there are no vacancies.
+                </p>
+            </div>
+        </div>
     </div>
 
 </body>
