Added links to founder projects section. Modified JS file for that.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A cloud application development company.">
     <link rel="icon" href="/assets/icons/TamilNady_Map_Icon.png">
     <title>Aukdon</title>
     <!-- Tailwind CSS -->
@@ -105,7 +106,7 @@
                         </div>
                     </a>
 
-                   <a href="#" class="sm:hover:-translate-y-1 sm:duration-150">
+                   <a href="https://github.com/thekuvel/GOD_FrontEnd" target="_blank" class="sm:hover:-translate-y-1 sm:duration-150">
                         <div class="lg:grid lg:grid-cols-12">
                             <div class="col-span-5 grid justify-center lg:justify-start sm:col-span-3">
                                 <img class="w-full max-w-[64px]" src="https://cdn-icons-png.flaticon.com/512/9385/9385681.png">
