--- a/pages/founder/founder.html
+++ b/pages/founder/founder.html
@@ -178,29 +178,20 @@
             <div class="mb-5">
                 <h3 class="text-[20px]">Projects</h3>
             </div>
-            <div class="sm:grid grid-cols-2 gap-5">
-                <div class="bg-[#E7F3F8] p-5">
+            <div class="projectsContainer sm:grid grid-cols-2 gap-5">
+                <!-- List of projects using Javascript map -->
+                <!-- <div class="grid gap-5 bg-[#E7F3F8] p-5">
                     <p>Requirement gathering application - IBM</p>
                     <p class="text-black/75">
                         A b2b application. <br>
                         Single application for the airline employees to create configuration and issue request for the applications they use. <br>
                     </p>
-                </div>
-                <div class="bg-[#E7F3F8] p-5">
-                    <p>Game Of Domination - Personal</p>
-                    <p class="text-black/75">
-                        Tournament and playground hosting application. <br>
-                        A cloud app to host, participate in tournaments and to host and rent playgrounds and venues.
-                    </p>
-                </div>
-                <div class="bg-[#E7F3F8] p-5">
-                    <p>Careerda - Personal</p>
-                    <p class="text-black/75">
-                        A b2b application. <br>
-                        Single application for the airline employees to create support ticket for all
-                        third party services and applications they use.
-                    </p>
-                </div>
+                    <a href="https://github.com/thekuvel" target="_blank">
+                        <button class="text-black border border-[#D9D9D9] rounded p-2 hover:bg-[#6946FA] hover:text-[#ffffff]">
+                            GitHub Link --&gt
+                        </button>
+                    </a>
+                </div> -->
             </div>
         </div>
 
