Added career section and basic animations.

--- a/pages/careers/index.html
+++ b/pages/careers/index.html
@@ -24,14 +24,34 @@
         <!-- First section - Intro -->
         <div>
             <h1 class="font-['Fredoka'] text-[48px]">Careers</h1>
-            <div class="lg:grid grid-cols-2">
+            
+            <!-- <div class="lg:grid grid-cols-2">
                 <p>
                     Currently there are no vacancies.
                 </p>
+            </div> -->
+
+            <div class="careerCardContainer grid grid-cols-2 gap-5">
+
+                <!-- <div class="bg-[#E7F3F8] p-5 grid gap-2">
+                    <h3 class="font-semibold">Full Stack Developer - Intern</h3>
+                    <p class="font-medium">Description:</p>
+                    <p>A MERN full stack developer. Willing to learn and work on several products.</p>
+                    <p class="font-medium">Preference:</p>
+                    <p>FSD certification (Not madatory), JavaScript basics, React basics, Node basics and AWS (Not mandatory)</p>
+                    <div class="flex justify-between">
+                        <p class="font-medium">Work time: Full time (4-7hrs per day)</p>
+                        <p class="font-medium">Location: Remote</p>
+                        <p class="font-medium">Salary: 5000/month</p>
+                    </div>
+                </div> -->
+
             </div>
+
         </div>
     </div>
 
+    <script src="./script.js"></script>
 </body>
 
 </html>
