Added contact link in careers site.

--- a/pages/careers/index.html
+++ b/pages/careers/index.html
@@ -48,6 +48,11 @@
 
             </div>
 
+            <div class="mt-10">
+                <h1 class="text-blue-500">Send mail with subject "Career opportunity - Position title" and attach your resume.</h1>
+                <a href="/pages/contact/index.html">Click hear</a>
+            </div>
+
         </div>
     </div>
 
