--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -26,7 +26,7 @@
         <div>
             <h1 class="font-['Fredoka'] text-[48px]">Contact Us</h1>
             <p>
-                For business enquiries mail to: <a href="mailto:team.aukdon@gmail.com" class="text-blue-500">team.aukdon@gmail.com</a>
+                For enquiries mail to: <a href="mailto:team.aukdon@gmail.com" class="text-blue-500">team.aukdon@gmail.com</a>
             </p>
             <br>
             <p>
@@ -46,6 +46,8 @@
                 For support: <span class="font-bold">Help</span> - ... <br>
             
                 For others: <span class="font-bold">Others</span> - ... <br>
+
+                For careers: <span class="font-bold">Career opportunity - Position title</span> <br>
             </p>
         </div>
 
